--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
  <div id="portfolio">
-    <h1>Featured Projects</h1>
+    <h1>Featured Projects num 2
+    </h1>
     <div class="projects">
       <!-- Featured projects will be added here -->
     </div>
